--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,10 +1,10 @@
 RewriteEngine On
+RewriteBase /app/
 
-# Handle Angular Router
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(?!api).*$ /index.html [L]
+# Serve static files directly
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^ - [L]
 
-# Redirect HTTP to HTTPS
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# Route all other requests to index.html
+RewriteRule ^ index.html [L]
