--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,16 @@
 RewriteEngine On
 
-RewriteCond %{REQUEST_URI} ^/api/
-RewriteRule ^(.*)$ - [L]
-
+# Handle Angular routes (SPA)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !^/api/
 RewriteRule . /index.html [L]
+
+# Handle API routes
+RewriteCond %{REQUEST_URI} ^/api/
+RewriteRule ^api/(.*)$ /api/$1 [L]
+
+# Security headers
+Header always set X-Content-Type-Options nosniff
+Header always set X-Frame-Options DENY
+Header always set X-XSS-Protection "1; mode=block"
