--- a/api/.env.local
+++ b/api/.env.local
@@ -1,9 +1,10 @@
+# Local Development Environment Configuration
 APP_ENV=development
 
 # Local Database Configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=password1
 DB_NAME=lottery_db
 
 # JWT Secret
