--- a/api/.htaccess
+++ b/api/.htaccess
@@ -15,6 +15,8 @@ RewriteRule ^results$ results.php [L]
 RewriteRule ^entries$ entries.php [L]
 RewriteRule ^pool$ pool.php [L]
 RewriteRule ^stats$ stats.php [L]
+RewriteRule ^dashboard-stats$ dashboard-stats.php [L]
+RewriteRule ^upcoming-draws$ upcoming-draws.php [L]
 
 # Handle CORS preflight requests
 RewriteCond %{REQUEST_METHOD} OPTIONS
