--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,23 +1,34 @@
+# API Directory Configuration
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
+
+# Remove .php extension from API endpoints
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^.]+)$ $1.php [NC,L]
 
-# API Routes
-RewriteRule ^health$ health.php [L]
-RewriteRule ^register$ register.php [L]
-RewriteRule ^login$ login.php [L]
-RewriteRule ^verify-otp$ verify-otp.php [L]
-RewriteRule ^resend-otp$ resend-otp.php [L]
-RewriteRule ^draws$ draws.php [L]
-RewriteRule ^play$ play.php [L]
-RewriteRule ^play-lottery$ play.php [L]
-RewriteRule ^results$ results.php [L]
-RewriteRule ^entries$ entries.php [L]
-RewriteRule ^pool$ pool.php [L]
-RewriteRule ^stats$ stats.php [L]
-RewriteRule ^dashboard-stats$ dashboard-stats.php [L]
-RewriteRule ^upcoming-draws$ upcoming-draws.php [L]
+# Security: Prevent access to sensitive files
+<Files ".env">
+    Order allow,deny
+    Deny from all
+</Files>
 
-# Handle CORS preflight requests
-RewriteCond %{REQUEST_METHOD} OPTIONS
-RewriteRule ^(.*)$ $1 [R=200,L]
+<Files "*.log">
+    Order allow,deny
+    Deny from all
+</Files>
+
+# Enable error logging but hide errors from users
+php_flag display_errors Off
+php_flag log_errors On
+php_value error_log /home/u606331557/domains/totalfreelotto.com/logs/php_errors.log
+
+# Set proper content type for API responses
+<IfModule mod_headers.c>
+    Header set Content-Type "application/json; charset=UTF-8"
+</IfModule>
+
+# Increase upload limits for file uploads
+php_value upload_max_filesize 10M
+php_value post_max_size 10M
+php_value max_execution_time 300
+php_value max_input_time 300
